--- a/index.html
+++ b/index.html
@@ -1,63 +1,104 @@
 <!DOCTYPE HTML>
-<html lang="en">
+<html>
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Portfolio website for Menna Elwan, Mobile Developer">
-    <meta name="author" content="Menna Elwan">
-    <title>Menna Elwan - Mobile Developer</title>
-    <link rel="icon" href="images/user-3.jpg" type="image/x-icon">
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>Menna Elwan</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="Portfolio website for Menna Elwan, Mobile Developer" />
+    <meta name="keywords" content="portfolio Menna Elwan, Menna Elwan, Mobile Developer, Flutter, Android, Java, Kotlin, Dart, Swift" />
+    <meta name="author" content="Menna Elwan" />
+    <link rel="icon" href="images/user-3.jpg" type="image/x-icon" />
+    <link rel="shortcut icon" href="images/user-3.jpg" type="image/x-icon" />
+    <!-- Facebook and Twitter integration -->
+    <meta property="og:title" content="Menna Elwan - Mobile Developer" />
+    <meta property="og:image" content="images/user-3.jpg" />
+    <meta property="og:url" content="https://menna3lwan.github.io" />
+    <meta property="og:site_name" content="Menna Elwan" />
+    <meta property="og:description" content="Portfolio website for Menna Elwan, Mobile Developer specializing in cross-platform app development." />
+    <meta name="twitter:title" content="Menna Elwan - Mobile Developer" />
+    <meta name="twitter:image" content="images/user-3.jpg" />
+    <meta name="twitter:url" content="https://menna3lwan.github.io" />
+    <meta name="twitter:card" content="summary" />
 
-    <!-- External Stylesheets -->
-    <link href="https://fonts.googleapis.com/css?family=Space+Mono|Kaushan+Script" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Space+Mono" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Kaushan+Script" rel="stylesheet">
+
+    <!-- Animate.css -->
     <link rel="stylesheet" href="css/animate.css">
-    <link rel="stylesheet" href="css/bootstrap.css">
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="https://unpkg.com/github-calendar@latest/dist/github-calendar-responsive.css">
-    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css">
 
+    <link rel="stylesheet" href="css/style-animate-heading.css">
+    <!-- Icomoon Icon Fonts-->
+    <link rel="stylesheet" href="css/icomoon.css">
+    <!-- Bootstrap  -->
+    <link rel="stylesheet" href="css/bootstrap.css">
+    <!-- Optionally, include the theme (if you don't want to struggle to write the CSS) -->
+    <link rel="stylesheet" href="https://unpkg.com/github-calendar@latest/dist/github-calendar-responsive.css" />
+
+    <!-- Theme style  -->
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css"
+    integrity="sha512-xodZBNTC5n17Xt2atTPuE1HxjVMSvLVW9ocqUKLsCC5CXdbqCmblAshOMAS6/keqq/sMZMZ19scR4PsZChSR7A=="
+    crossorigin=""/>
+    <!-- Modernizr JS -->
+    <script src="js/modernizr-2.6.2.min.js"></script>
+    <!-- FOR IE9 below -->
+    <!--[if lt IE 9]>
+	<script src="js/respond.min.js"></script>
+	<![endif]-->
     <style>
         #mapid { height: 260px; }
+
+        /* Expanded profile image area */
         .profile-thumb {
-            width: 250px;
-            height: 250px;
-            margin: 0 auto 30px;
+            width: 250px; /* Increased size */
+            height: 250px; /* Increased size */
+            margin: 0 auto 30px; /* Centered with margin */
             background-size: cover;
             background-position: center;
-            border-radius: 50%;
-            border: 6px solid #fff;
-            box-shadow: 0 6px 20px rgba(0, 0, 0, 0.3);
+            border-radius: 50%; /* Circular image */
+            border: 6px solid #fff; /* White border */
+            box-shadow: 0 6px 20px rgba(0, 0, 0, 0.3); /* Subtle shadow */
         }
+
+        /* Ensure the header section has enough space for the larger image */
         #fh5co-header {
-            padding: 100px 0;
+            padding: 100px 0; /* Increased padding for more space */
         }
     </style>
 </head>
+
 <body>
+
     <div class="fh5co-loader"></div>
+
     <div id="page">
-        <!-- Header -->
-        <header id="fh5co-header" class="fh5co-cover js-fullheight" style="background-image:url(images/cover_bg_3.jpg);" data-stellar-background-ratio="0.5">
+        <header id="fh5co-header" class="fh5co-cover js-fullheight" role="banner" style="background-image:url(images/cover_bg_3.jpg);" data-stellar-background-ratio="0.5">
             <div class="overlay"></div>
             <div class="container">
                 <div class="row">
                     <div class="col-md-8 col-md-offset-2 text-center">
                         <div class="display-t js-fullheight">
                             <div class="display-tc js-fullheight animate-box" data-animate-effect="fadeIn">
-                                <div class="profile-thumb" style="background-image: url('images/user-3.jpg');"></div>
+                                <div class="profile-thumb" style="background: url('images/user-3.jpg');"></div>
                                 <h1><span>Menna Elwan</span></h1>
-                                <span class="cd-headline clip is-full-width">
-                                    <span class="cd-words-wrapper">
-                                        <b class="is-visible">Mobile Developer</b>
-                                        <b>Cross-Platform App Developer</b>
-                                    </span>
+                                <span class="cd-intro">
+                                    <span class="cd-headline clip is-full-width">
+                                        <span class="cd-words-wrapper">
+											<b class="is-visible changeboldprop">Mobile Developer</b>
+											<b class="changeboldprop">Cross-Platform App Developer</b>
+										</span>
                                 </span>
-                                <ul class="fh5co-social-icons">
-                                    <li><a href="https://www.linkedin.com/in/menna-elwan-13572b251/" target="_blank"><i class="icon-linkedin2"></i></a></li>
-                                    <li><a href="https://github.com/menna3lwan" target="_blank"><i class="icon-github"></i></a></li>
-                                    <li><a href="https://wa.me/+201127798986" target="_blank"><i class="icon-whatsapp"></i></a></li>
-                                    <li><a href="mailto:menna3lwan@gmail.com" target="_blank"><i class="icon-email"></i></a></li>
-                                </ul>
+                                </span>
+                                <p>
+                                    <ul class="fh5co-social-icons">
+                                        <li><a href="https://www.linkedin.com/in/menna-elwan-13572b251/" target="_blank"><i class="icon-linkedin2"></i></a></li>
+                                        <li><a href="https://github.com/menna3lwan" target="_blank"><i class="icon-github"></i></a></li>
+                                        <li><a href="https://wa.me/+201127798986" target="_blank"><i class="icon-whatsapp"></i></a></li>
+                                        <li><a href="mailto:menna3lwan@gmail.com" target="_blank"><i class="icon-email"></i></a></li>
+                                    </ul>
+                                </p>
                             </div>
                         </div>
                     </div>
@@ -65,7 +106,6 @@
             </div>
         </header>
 
-        <!-- About Section -->
         <div id="fh5co-about" class="animate-box">
             <div class="container">
                 <div class="row">
@@ -78,30 +118,92 @@
                         <ul class="info">
                             <li><span class="first-block">Full Name:</span><span class="second-block">Menna Maher Elwan</span></li>
                             <li><span class="first-block">Phone:</span><span class="second-block">+201127798986</span></li>
-                            <li><span class="first-block">Email:</span><span class="second-block"><a href="mailto:menna3lwan@gmail.com">menna3lwan@gmail.com</a></span></li>
+                            <li><span class="first-block">Email:</span><span class="second-block">menna3lwan@gmail.com</span></li>
                             <li><span class="first-block">Website:</span><span class="second-block"><a href="https://menna3lwan.github.io">menna3lwan.github.io</a></span></li>
                             <li><span class="first-block">Address:</span><span class="second-block">Qalyub, Alqaliobia, Egypt</span></li>
                         </ul>
                     </div>
                     <div class="col-md-8">
-                        <h2>Hello!</h2>
+                        <h2>Hello There!</h2>
                         <p>
-                            I’m a <strong>Mobile Developer</strong> with expertise in cross-platform app development using <strong>Java, Dart, Kotlin, and Swift</strong>. 
-                            My passion lies in creating <strong>high-quality, secure, and scalable applications</strong> that enhance user experience and meet business goals.
-                        </p>
-                        <p>
-                            I am currently pursuing a <strong>Bachelor’s degree in Computer Science and Artificial Intelligence</strong> at <strong>Benha University</strong>, 
-                            expected to graduate in <strong>2026</strong>. My focus is on mastering emerging technologies and contributing to innovation in the mobile development domain.
+                           I am a Mobile Developer with expertise in cross-platform app development using <strong>Java, Dart, Kotlin, and Swift</strong>. 
+                           Skilled in optimizing app performance, integrating backend services, and enhancing user experience. 
+                           Committed to delivering <strong>high-quality, secure, and scalable applications</strong> that meet both user needs and business objectives.
+                       </p>
+                       <p>
+                           Currently pursuing a <strong>Bachelor’s degree in Computer Science and Artificial Intelligence</strong> at <strong>Benha University</strong>, 
+                           with an expected graduation in <strong>2026</strong>. Actively building a strong foundation in software development and emerging technologies 
+                           to drive innovation in the field of mobile applications.
+                       </p>
+                        <ul class="fh5co-social-icons">
+                            <li><a href="https://www.linkedin.com/in/menna-elwan-13572b251/" target="_blank"><i class="icon-linkedin2"></i></a></li>
+                            <li><a href="https://github.com/menna3lwan" target="_blank"><i class="icon-github"></i></a></li>
+                            <li><a href="https://wa.me/+201127798986" target="_blank"><i class="icon-whatsapp"></i></a></li>
+                            <li><a href="mailto:menna3lwan@gmail.com" target="_blank"><i class="icon-email"></i></a></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <!-- Other sections like Resume, Skills, Projects, etc. remain unchanged -->
+
+        <div id="fh5co-started" class="fh5co-bg-dark">
+            <div class="overlay"></div>
+            <div class="container">
+                <div class="row animate-box">
+                    <div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
+                        <h2>Hire Me!</h2>
+                        <p><a href="https://docs.google.com/document/d/e/2PACX-1vSXK6i8ydfJuDxqoYrL8DVANDnPfCmcoWEK8AzRWKVeDcjGe0bcyoVSGk9JVFGlTVPH24ncjF0gThhn/pub" class="btn btn-default btn-lg">Download CV</a></p>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div id="fh5co-footer">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-12">
+                        <p>&copy; All Rights Reserved. <br>Designed by
+                            <a href="https://menna3lwan.github.io" target="_blank">Menna Elwan</a>
                         </p>
                     </div>
                 </div>
             </div>
         </div>
-        <!-- Other Sections -->
+
+        <div class="gototop js-top">
+            <a href="#" class="js-gotop"><i class="icon-arrow-up22"></i></a>
+        </div>
+
+        <!-- jQuery -->
+        <script src="js/jquery.min.js"></script>
+        <!-- jQuery Easing -->
+        <script src="js/jquery.easing.1.3.js"></script>
+        <!-- Animated headlines -->
+        <script src="js/animated-headline.js"></script>
+        <!-- Bootstrap -->
+        <script src="js/bootstrap.min.js"></script>
+        <!-- Waypoints -->
+        <script src="js/jquery.waypoints.min.js"></script>
+        <!-- Stellar Parallax -->
+        <script src="js/jquery.stellar.min.js"></script>
+        <!-- Easy PieChart -->
+        <script src="js/jquery.easypiechart.min.js"></script>
+        <!-- Google Map -->
+        <script src="https://unpkg.com/github-calendar@latest/dist/github-calendar.min.js"></script>
+        <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"
+        integrity="sha512-XQoYMqMTK8LvdxXYG3nZ448hOEQiglfqkJs1NOQV44cWnUrBc8PkAOcXy20w0vlaXaVUearIOBhiXZ5V3ynxwA=="
+        crossorigin=""></script>
+        <!-- Main -->
+        <script src="js/main.js"></script>
+        <script>
+            GitHubCalendar(".calendar", "menna3lwan");
+            // or enable responsive functionality
+            GitHubCalendar(".calendar", "menna3lwan", {
+                responsive: true
+            });
+        </script>
     </div>
-    <!-- Scripts -->
-    <script src="js/jquery.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
-    <script src="js/main.js"></script>
 </body>
-</html>
+</html> 
