--- a/index.html
+++ b/index.html
@@ -66,6 +66,48 @@
         #fh5co-header {
             padding: 100px 0; /* Increased padding for more space */
         }
+
+        /* Transparent icon styling */
+        .fh5co-social-icons a i {
+            background: transparent !important;
+            padding: 5px;
+            border-radius: 50%;
+            transition: background-color 0.3s ease, transform 0.3s ease;
+        }
+
+        .fh5co-social-icons a i:hover {
+            background-color: rgba(0, 123, 255, 0.1);
+            transform: scale(1.1);
+        }
+
+        /* Restyled About Me section */
+        #fh5co-about {
+            background-color: #f9f9f9;
+            padding: 70px 0;
+            font-family: 'Space Mono', monospace;
+        }
+
+        #fh5co-about h2 {
+            font-size: 42px;
+            font-weight: bold;
+            color: #222;
+            margin-bottom: 30px;
+        }
+
+        #fh5co-about p {
+            font-size: 17px;
+            color: #444;
+            margin-bottom: 20px;
+            line-height: 1.7;
+        }
+
+        #fh5co-about .info li {
+            margin-bottom: 25px;
+        }
+
+        #fh5co-about .info li i {
+            margin-right: 12px;
+        }
     </style>
 </head>
 
@@ -86,9 +128,9 @@
                                 <span class="cd-intro">
                                     <span class="cd-headline clip is-full-width">
                                         <span class="cd-words-wrapper">
-											<b class="is-visible changeboldprop">Mobile Developer</b>
-											<b class="changeboldprop">Cross-Platform App Developer</b>
-										</span>
+												<b class="is-visible changeboldprop">Mobile Developer</b>
+												<b class="changeboldprop">Cross-Platform App Developer</b>
+											</span>
                                 </span>
                                 </span>
                                 <p>
@@ -106,38 +148,38 @@
             </div>
         </header>
 
-        <div id="fh5co-about" class="animate-box" style="background-color: #ffffff; padding: 60px 0; font-family: Arial, sans-serif;">
+        <div id="fh5co-about" class="animate-box">
             <div class="container">
                 <div class="row">
                     <div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
-                        <h2 style="font-size: 40px; font-weight: bold; color: #333; margin-bottom: 25px;">About Me</h2>
-                        <p style="font-size: 18px; color: #666; margin-bottom: 0;">Discover my story, skills, and aspirations.</p>
+                        <h2>About Me</h2>
+                        <p>Discover my story, skills, and aspirations.</p>
                     </div>
                 </div>
                 <div class="row" style="margin-top: 40px;">
                     <div class="col-md-4" style="border-right: 1px solid #ddd; padding-right: 30px;">
-                        <ul class="info" style="list-style: none; padding: 0; font-size: 16px; line-height: 1.8;">
-                            <li style="margin-bottom: 20px;"><i class="icon-user" style="color: #007BFF; margin-right: 10px;"></i><span><strong>Full Name:</strong></span> Menna Maher Elwan</li>
-                            <li style="margin-bottom: 20px;"><i class="icon-phone" style="color: #28a745; margin-right: 10px;"></i><span><strong>Phone:</strong></span> <a href="tel:+201127798986" style="color: #555; text-decoration: none;">+201127798986</a></li>
-                            <li style="margin-bottom: 20px;"><i class="icon-envelope" style="color: #dc3545; margin-right: 10px;"></i><span><strong>Email:</strong></span> <a href="mailto:menna3lwan@gmail.com" style="color: #555; text-decoration: none;">menna3lwan@gmail.com</a></li>
-                            <li style="margin-bottom: 20px;"><i class="icon-globe" style="color: #17a2b8; margin-right: 10px;"></i><span><strong>Website:</strong></span> <a href="https://menna3lwan.github.io" target="_blank" style="color: #555; text-decoration: none;">menna3lwan.github.io</a></li>
-                            <li style="margin-bottom: 20px;"><i class="icon-location" style="color: #ffc107; margin-right: 10px;"></i><span><strong>Address:</strong></span> Qalyub, Alqaliobia, Egypt</li>
+                        <ul class="info">
+                            <li><i class="icon-user"></i><span><strong>Full Name:</strong></span> Menna Maher Elwan</li>
+                            <li><i class="icon-phone"></i><span><strong>Phone:</strong></span> <a href="tel:+201127798986">+201127798986</a></li>
+                            <li><i class="icon-envelope"></i><span><strong>Email:</strong></span> <a href="mailto:menna3lwan@gmail.com">menna3lwan@gmail.com</a></li>
+                            <li><i class="icon-globe"></i><span><strong>Website:</strong></span> <a href="https://menna3lwan.github.io" target="_blank">menna3lwan.github.io</a></li>
+                            <li><i class="icon-location"></i><span><strong>Address:</strong></span> Qalyub, Alqaliobia, Egypt</li>
                         </ul>
                     </div>
                     <div class="col-md-8" style="padding-left: 30px;">
-                        <h3 style="font-size: 30px; font-weight: bold; color: #333; margin-bottom: 25px;">Hello There!</h3>
-                        <p style="font-size: 16px; line-height: 1.8; color: #555; margin-bottom: 20px;">
+                        <h3>Hello There!</h3>
+                        <p>
                             I am a Mobile Developer with expertise in cross-platform app development using <strong>Java, Dart, Kotlin, and Swift</strong>. Skilled in optimizing app performance, integrating backend services, and enhancing user experience. I am committed to delivering <strong>high-quality, secure, and scalable applications</strong> that meet both user needs and business objectives.
                         </p>
-                        <p style="font-size: 16px; line-height: 1.8; color: #555; margin-bottom: 20px;">
+                        <p>
                             Currently pursuing a <strong>Bachelor’s degree in Computer Science and Artificial Intelligence</strong> at <strong>Benha University</strong>, with an expected graduation in <strong>2026</strong>. I am actively building a strong foundation in software development and emerging technologies to drive innovation in the field of mobile applications.
                         </p>
                         <div style="margin-top: 30px;">
-                            <ul class="fh5co-social-icons" style="padding: 0; list-style: none; display: flex; gap: 20px;">
-                                <li><a href="https://www.linkedin.com/in/menna-elwan-13572b251/" target="_blank" style="color: #0077b5; font-size: 24px; text-decoration: none;"><i class="icon-linkedin2"></i></a></li>
-                                <li><a href="https://github.com/menna3lwan" target="_blank" style="color: #333; font-size: 24px; text-decoration: none;"><i class="icon-github"></i></a></li>
-                                <li><a href="https://wa.me/+201127798986" target="_blank" style="color: #25d366; font-size: 24px; text-decoration: none;"><i class="icon-whatsapp"></i></a></li>
-                                <li><a href="mailto:menna3lwan@gmail.com" target="_blank" style="color: #d14836; font-size: 24px; text-decoration: none;"><i class="icon-email"></i></a></li>
+                            <ul class="fh5co-social-icons">
+                                <li><a href="https://www.linkedin.com/in/menna-elwan-13572b251/" target="_blank"><i class="icon-linkedin2"></i></a></li>
+                                <li><a href="https://github.com/menna3lwan" target="_blank"><i class="icon-github"></i></a></li>
+                                <li><a href="https://wa.me/+201127798986" target="_blank"><i class="icon-whatsapp"></i></a></li>
+                                <li><a href="mailto:menna3lwan@gmail.com" target="_blank"><i class="icon-email"></i></a></li>
                             </ul>
                         </div>
                     </div>
