--- a/index.html
+++ b/index.html
@@ -108,6 +108,40 @@
         #fh5co-about .info li i {
             margin-right: 12px;
         }
+
+        /* Hire Me Section */
+        #fh5co-started {
+            background-color: #333;
+            color: #fff;
+            padding: 70px 0;
+            text-align: center;
+        }
+
+        #fh5co-started h2 {
+            font-size: 36px;
+            font-weight: bold;
+            margin-bottom: 20px;
+        }
+
+        #fh5co-started p {
+            font-size: 18px;
+            margin-bottom: 30px;
+        }
+
+        #fh5co-started .btn {
+            background-color: #007bff;
+            color: #fff;
+            padding: 15px 30px;
+            font-size: 16px;
+            text-transform: uppercase;
+            border-radius: 30px;
+            transition: background-color 0.3s ease, transform 0.3s ease;
+        }
+
+        #fh5co-started .btn:hover {
+            background-color: #0056b3;
+            transform: translateY(-3px);
+        }
     </style>
 </head>
 
@@ -128,9 +162,9 @@
                                 <span class="cd-intro">
                                     <span class="cd-headline clip is-full-width">
                                         <span class="cd-words-wrapper">
-												<b class="is-visible changeboldprop">Mobile Developer</b>
-												<b class="changeboldprop">Cross-Platform App Developer</b>
-											</span>
+											<b class="is-visible changeboldprop">Mobile Developer</b>
+											<b class="changeboldprop">Cross-Platform App Developer</b>
+										</span>
                                 </span>
                                 </span>
                                 <p>
@@ -187,15 +221,18 @@
             </div>
         </div>
 
-        <!-- Other sections like Resume, Skills, Projects, etc. remain unchanged -->
-
         <div id="fh5co-started" class="fh5co-bg-dark">
             <div class="overlay"></div>
             <div class="container">
                 <div class="row animate-box">
                     <div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
-                        <h2>Hire Me!</h2>
-                        <p><a href="https://docs.google.com/document/d/e/2PACX-1vSXK6i8ydfJuDxqoYrL8DVANDnPfCmcoWEK8AzRWKVeDcjGe0bcyoVSGk9JVFGlTVPH24ncjF0gThhn/pub" class="btn btn-default btn-lg">Download CV</a></p>
+                        <h2>Work With Me</h2>
+                        <p>
+                            Let's bring your ideas to life with innovative and efficient mobile app solutions. Whether you’re looking for a complete app design, optimization of your current project, or backend integrations, I’m here to help. Let’s collaborate and create something remarkable together.
+                        </p>
+                        <p>
+                            <a href="https://docs.google.com/document/d/e/2PACX-1vSXK6i8ydfJuDxqoYrL8DVANDnPfCmcoWEK8AzRWKVeDcjGe0bcyoVSGk9JVFGlTVPH24ncjF0gThhn/pub" class="btn btn-default btn-lg">Download My CV</a>
+                        </p>
                     </div>
                 </div>
             </div>
