--- a/index.html
+++ b/index.html
@@ -48,99 +48,77 @@
 	<script src="js/respond.min.js"></script>
 	<![endif]-->
     <style>
-        #mapid { height: 260px; }
-
-        /* Expanded profile image area */
-        .profile-thumb {
-            width: 250px; /* Increased size */
-            height: 250px; /* Increased size */
-            margin: 0 auto 30px; /* Centered with margin */
-            background-size: cover;
-            background-position: center;
-            border-radius: 50%; /* Circular image */
-            border: 6px solid #fff; /* White border */
-            box-shadow: 0 6px 20px rgba(0, 0, 0, 0.3); /* Subtle shadow */
-        }
-
-        /* Ensure the header section has enough space for the larger image */
-        #fh5co-header {
-            padding: 100px 0; /* Increased padding for more space */
-        }
-
-        /* Transparent icon styling */
-        .fh5co-social-icons a i {
-            background: transparent !important;
-            padding: 5px;
-            border-radius: 50%;
-            transition: background-color 0.3s ease, transform 0.3s ease;
-        }
-
-        .fh5co-social-icons a i:hover {
-            background-color: rgba(0, 123, 255, 0.1);
-            transform: scale(1.1);
-        }
-
-        /* Restyled About Me section */
+        /* Add the updated About Me section CSS here */
         #fh5co-about {
-            background-color: #f9f9f9;
-            padding: 70px 0;
+            background-color: #f5f5f5;
+            padding: 100px 0;
             font-family: 'Space Mono', monospace;
+            border-top: 1px solid #ddd;
+            border-bottom: 1px solid #ddd;
         }
 
         #fh5co-about h2 {
-            font-size: 42px;
+            font-size: 48px;
             font-weight: bold;
-            color: #222;
-            margin-bottom: 30px;
+            color: #333;
+            margin-bottom: 40px;
+            text-transform: uppercase;
+            letter-spacing: 2px;
         }
 
         #fh5co-about p {
-            font-size: 17px;
-            color: #444;
-            margin-bottom: 20px;
-            line-height: 1.7;
+            font-size: 18px;
+            color: #555;
+            margin-bottom: 25px;
+            line-height: 1.8;
+        }
+
+        #fh5co-about .info {
+            background-color: #fff;
+            padding: 30px;
+            border-radius: 10px;
+            box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
         }
 
         #fh5co-about .info li {
-            margin-bottom: 25px;
+            margin-bottom: 20px;
+            font-size: 16px;
+            color: #444;
         }
 
         #fh5co-about .info li i {
-            margin-right: 12px;
+            margin-right: 15px;
+            color: #007bff;
+            font-size: 20px;
         }
 
-        /* Hire Me Section */
-        #fh5co-started {
-            background-color: orange; /* Changed to orange */
-            color: #fff;
-            padding: 70px 0;
-            text-align: center;
-        }
-
-        #fh5co-started h2 {
-            font-size: 36px;
+        #fh5co-about .col-md-8 h3 {
+            font-size: 32px;
+            color: #333;
+            margin-bottom: 25px;
             font-weight: bold;
-            margin-bottom: 20px;
         }
 
-        #fh5co-started p {
+        #fh5co-about .col-md-8 p {
             font-size: 18px;
-            margin-bottom: 30px;
+            color: #555;
+            margin-bottom: 25px;
+            line-height: 1.8;
         }
 
-        #fh5co-started .btn {
-            background-color: navy; /* Changed to navy blue */
-            color: #fff;
-            padding: 15px 30px;
-            font-size: 16px;
-            text-transform: uppercase;
-            border-radius: 30px;
-            transition: background-color 0.3s ease, transform 0.3s ease;
+        #fh5co-about .fh5co-social-icons {
+            margin-top: 30px;
         }
 
-        #fh5co-started .btn:hover {
-            background-color: #000080; /* Darker shade of navy blue for hover */
-            transform: translateY(-3px);
+        #fh5co-about .fh5co-social-icons a i {
+            font-size: 24px;
+            color: #007bff;
+            transition: color 0.3s ease, transform 0.3s ease;
+        }
+
+        #fh5co-about .fh5co-social-icons a i:hover {
+            color: #0056b3;
+            transform: scale(1.1);
         }
     </style>
 </head>
@@ -150,6 +128,7 @@
     <div class="fh5co-loader"></div>
 
     <div id="page">
+        <!-- Header Section -->
         <header id="fh5co-header" class="fh5co-cover js-fullheight" role="banner" style="background-image:url(images/cover_bg_3.jpg);" data-stellar-background-ratio="0.5">
             <div class="overlay"></div>
             <div class="container">
@@ -182,6 +161,7 @@
             </div>
         </header>
 
+        <!-- About Me Section -->
         <div id="fh5co-about" class="animate-box">
             <div class="container">
                 <div class="row">
@@ -221,6 +201,7 @@
             </div>
         </div>
 
+        <!-- Work With Me Section -->
         <div id="fh5co-started" class="fh5co-bg-dark">
             <div class="overlay"></div>
             <div class="container">
@@ -238,6 +219,7 @@
             </div>
         </div>
 
+        <!-- Footer Section -->
         <div id="fh5co-footer">
             <div class="container">
                 <div class="row">
@@ -250,25 +232,19 @@
             </div>
         </div>
 
+        <!-- Go to Top Button -->
         <div class="gototop js-top">
             <a href="#" class="js-gotop"><i class="icon-arrow-up22"></i></a>
         </div>
 
-        <!-- jQuery -->
+        <!-- Scripts -->
         <script src="js/jquery.min.js"></script>
-        <!-- jQuery Easing -->
         <script src="js/jquery.easing.1.3.js"></script>
-        <!-- Animated headlines -->
         <script src="js/animated-headline.js"></script>
-        <!-- Bootstrap -->
         <script src="js/bootstrap.min.js"></script>
-        <!-- Waypoints -->
         <script src="js/jquery.waypoints.min.js"></script>
-        <!-- Stellar Parallax -->
         <script src="js/jquery.stellar.min.js"></script>
-        <!-- Easy PieChart -->
         <script src="js/jquery.easypiechart.min.js"></script>
-        <!-- Google Map -->
         <script src="https://unpkg.com/github-calendar@latest/dist/github-calendar.min.js"></script>
         <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"
         integrity="sha512-XQoYMqMTK8LvdxXYG3nZ448hOEQiglfqkJs1NOQV44cWnUrLr8R9clIILTHQs7Uflr2B0BMXAX9lxHUrZh6OuvQ=="
