--- a/index.html
+++ b/index.html
@@ -55,13 +55,6 @@
             font-family: 'Space Mono', monospace;
             border-top: 1px solid #ddd;
             border-bottom: 1px solid #ddd;
-            cursor: pointer; /* Indicates the section is clickable */
-            transition: transform 0.3s ease, box-shadow 0.3s ease; /* Smooth transition */
-        }
-
-        #fh5co-about.clicked {
-            transform: scale(1.02); /* Slightly enlarge on click */
-            box-shadow: 0 10px 30px rgba(0, 0, 0, 0.2); /* Add shadow on click */
         }
 
         #fh5co-about h2 {
@@ -127,6 +120,17 @@
             color: #0056b3;
             transform: scale(1.1);
         }
+
+        /* Add zoom-in effect for words */
+        #fh5co-about .col-md-8 p span {
+            display: inline-block;
+            transition: transform 0.3s ease;
+        }
+
+        #fh5co-about .col-md-8 p span:hover {
+            transform: scale(1.2); /* Zoom in effect */
+            cursor: pointer; /* Indicates the word is interactive */
+        }
     </style>
 </head>
 
@@ -190,10 +194,10 @@
                     <div class="col-md-8" style="padding-left: 30px;">
                         <h3>Hello There!</h3>
                         <p>
-                            I am a Mobile Developer with expertise in cross-platform app development using <strong>Java, Dart, Kotlin, and Swift</strong>. Skilled in optimizing app performance, integrating backend services, and enhancing user experience. I am committed to delivering <strong>high-quality, secure, and scalable applications</strong> that meet both user needs and business objectives.
+                            <span>I</span> <span>am</span> <span>a</span> <span>Mobile</span> <span>Developer</span> <span>with</span> <span>expertise</span> <span>in</span> <span>cross-platform</span> <span>app</span> <span>development</span> <span>using</span> <span><strong>Java</strong></span>, <span><strong>Dart</strong></span>, <span><strong>Kotlin</strong></span>, <span>and</span> <span><strong>Swift</strong></span>. <span>Skilled</span> <span>in</span> <span>optimizing</span> <span>app</span> <span>performance</span>, <span>integrating</span> <span>backend</span> <span>services</span>, <span>and</span> <span>enhancing</span> <span>user</span> <span>experience</span>. <span>I</span> <span>am</span> <span>committed</span> <span>to</span> <span>delivering</span> <span><strong>high-quality</strong></span>, <span><strong>secure</strong></span>, <span>and</span> <span><strong>scalable</strong></span> <span>applications</span> <span>that</span> <span>meet</span> <span>both</span> <span>user</span> <span>needs</span> <span>and</span> <span>business</span> <span>objectives</span>.
                         </p>
                         <p>
-                            Currently pursuing a <strong>Bachelor’s degree in Computer Science and Artificial Intelligence</strong> at <strong>Benha University</strong>, with an expected graduation in <strong>2026</strong>. I am actively building a strong foundation in software development and emerging technologies to drive innovation in the field of mobile applications.
+                            <span>Currently</span> <span>pursuing</span> <span>a</span> <span><strong>Bachelor’s</strong></span> <span>degree</span> <span>in</span> <span><strong>Computer</strong></span> <span><strong>Science</strong></span> <span>and</span> <span><strong>Artificial</strong></span> <span><strong>Intelligence</strong></span> <span>at</span> <span><strong>Benha</strong></span> <span><strong>University</strong></span>, <span>with</span> <span>an</span> <span>expected</span> <span>graduation</span> <span>in</span> <span><strong>2026</strong></span>. <span>I</span> <span>am</span> <span>actively</span> <span>building</span> <span>a</span> <span>strong</span> <span>foundation</span> <span>in</span> <span>software</span> <span>development</span> <span>and</span> <span>emerging</span> <span>technologies</span> <span>to</span> <span>drive</span> <span>innovation</span> <span>in</span> <span>the</span> <span>field</span> <span>of</span> <span>mobile</span> <span>applications</span>.
                         </p>
                         <div style="margin-top: 30px;">
                             <ul class="fh5co-social-icons">
@@ -257,15 +261,6 @@
         integrity="sha512-XQoYMqMTK8LvdxXYG3nZ448hOEQiglfqkJs1NOQV44cWnUrLr8R9clIILTHQs7Uflr2B0BMXAX9lxHUrZh6OuvQ=="
         crossorigin=""></script>
         <script src="js/main.js"></script>
-
-        <!-- Add this script for click animation -->
-        <script>
-            $(document).ready(function() {
-                $('#fh5co-about').click(function() {
-                    $(this).toggleClass('clicked'); // Toggle the 'clicked' class
-                });
-            });
-        </script>
     </div>
 </body>
 
